<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/street_name"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/number"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />
    <EditText
        android:id="@+id/postal_code"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/postal_code"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/price"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />
    <EditText
        android:id="@+id/coins"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_border"
        android:hint="@string/can_payed_be_coins"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/add_washroom"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#5ab7b9"
        android:id="@+id/save"
        />

</RelativeLayout>